# dracula

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: build.yml  check.yml
charts/dracula/: Chart.yaml  Makefile  dracula_sa.yml  service-account.yaml  values.yaml
charts/dracula/templates/: cronjobs.yaml
dracula_ads/: Cargo.toml
dracula_ads/src/: ads_data.rs  clicks.rs  last_modified_date.rs  lib.rs
dracula_ads_athena/: Cargo.toml
dracula_ads_athena/src/: lib.rs
dracula_ads_athena/src/tasks/: clicks_stream_task.rs  mod.rs
dracula_aws/: .gitignore  Cargo.toml
dracula_aws/src/: aws.rs  file_stream.rs  lib.rs
dracula_booster/: Cargo.toml
dracula_booster/src/: booster.rs  lib.rs
dracula_cli/: Cargo.toml
dracula_cli/src/: lib.rs
dracula_kube/: Cargo.toml
dracula_kube/src/: lib.rs  pod.rs
dracula_parquet/: .gitignore  Cargo.toml
dracula_parquet/src/: dracula_parquet.rs  lib.rs
dracula_partition_dates/: Cargo.toml
dracula_partition_dates/src/: lib.rs  partition_dates.rs
dracula_schemas/: Cargo.toml
dracula_schemas/src/: lib.rs
dracula_schemas/src/models/: action_item.rs  address.rs  currency.rs  embedded_dynamic_form.rs  event.rs  inventories.rs  inventory_group.rs  invoice.rs  milestone.rs  mod.rs  note.rs  order.rs  organization.rs  proposal.rs  provider.rs  purchase_order.rs  rating.rs  refs.rs  request.rs  shipping.rs  tax.rs  timepoint.rs  turn_around_time.rs  user.rs  ware.rs  wpc.rs
dracula_schemas/src/tables/: action_items_tl.rs  addresses_tl.rs  currencies_tl.rs  embedded_dynamic_forms_tl.rs  events_tl.rs  inventories_tl.rs  inventory_groups_tl.rs  invoices_tl.rs  milestones_tl.rs  mod.rs  notes_tl.rs  orders_tl.rs  organizations_tl.rs  proposals_tl.rs  providers_tl.rs  purchase_orders_tl.rs  ratings_tl.rs  refs_tl.rs  requests_tl.rs  shippings_tl.rs  taxes_tl.rs  timepoints_tl.rs  turn_around_times_tl.rs  users_tl.rs  wares_tl.rs  wpc_tl.rs
dracula_tasks/: .gitignore  Cargo.toml
dracula_tasks/src/: lib.rs
dracula_tasks/src/tasks/: addresses.rs  currencies.rs  embedded_dynamic_forms.rs  events.rs  events_emails.rs  inventories.rs  inventory_groups.rs  invoices.rs  milestones.rs  mod.rs  notes.rs  orders.rs  organizations.rs  page_iter.rs  proposals.rs  providers.rs  purchase_orders.rs  ratings.rs  refs_providers.rs  refs_users.rs  requests.rs  shippings.rs  taxes.rs  template_task  users.rs  wares.rs  wpcs.rs
