[package]
name = "dracula_kube"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
futures = "0.3"
# k8s-openapi = { version = "0.7.1", default-features = false, features = ["v1_15"] }
k8s-openapi = { version = "0.13.0", default-features = false, features = ["v1_19"] }
kube = { version = "0.59.0" }
serde_json = "1"