[package]
name = "dracula_parquet"
version = "0.1.0"
authors = ["Maria Dubyaga <kraftaa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brotli = "=3.3.0"
parquet = "5"
parquet_derive = { version = "5", features = ["uuid", "chrono", "bigdecimal"] }
